--- a/themes/rosedale/style.scss
+++ b/themes/rosedale/style.scss
@@ -11,3 +11,53 @@
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 
 ------------------------------ ADDITIONAL CSS HERE ------------------------------*/
+
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;700&family=Overpass:wght@300;400;700&display=swap');
+
+$color--blue: #2e59a7;
+$color--blue-dark: #1e3a6d;
+
+$var--border-radius: 8px;
+$var--transition: .25s ease-out;
+$var--tight-gap: 8px;
+
+body {
+  font-family: 'Overpass', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Exo', sans-serif;
+}
+
+.util-nav {
+  position: fixed;
+  width: 100%;
+  
+  .et_pb_menu__wrap {
+    justify-content: flex-end;
+  }
+
+  li {
+    margin-top: 0 !important;
+    padding-left: ($var--tight-gap / 2) !important;
+    padding-right: ($var--tight-gap / 2) !important;
+  }
+
+  a {
+    transition: $var--transition;
+    background-color: $color--blue;
+    font-weight: bold;
+    color: white;
+    padding: 1em !important;
+    min-width: 150px;
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: $var--border-radius;
+    border-bottom-right-radius: $var--border-radius;
+    text-transform: uppercase;
+
+    &:hover {
+      background-color: $color--blue-dark;
+    }
+  }
+}
