--- a/themes/rosedale/style.scss
+++ b/themes/rosedale/style.scss
@@ -20,6 +20,7 @@ $color--grey: #eeeeee;
 $color--green: #a4c03c;
 
 $var--border-radius: 8px;
+$var--border-radius--big: 32px;
 $var--transition: .25s ease-out;
 $var--tight-gap: 8px;
 
@@ -118,6 +119,34 @@ h1, h2, h3, h4, h5, h6 {
 
 .brand-nav {
   padding-top: 64px !important;
+  display: flex;
+  align-items: flex-end;
+}
+
+.btn {
+  color: white;
+  padding: 1em 2em .8em;
+  border-radius: $var--border-radius--big;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: none;
+  display: flex;
+  align-items: center;
+  font-size: 1.1em;
+  transition: $var--transition;
+
+  &--blue {
+    background-color: $color--blue;
+    &:hover {
+      background-color: darken($color--blue, 10);
+    }
+  }
+  &--green {
+    background-color: $color--green;
+    &:hover {
+      background-color: darken($color--green, 10);
+    }
+  }
 }
 
 .hero {
@@ -126,6 +155,16 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     top: 0;
     width: 100%;
+
+    &__buttons {
+      display: flex;
+      justify-content: center;
+      margin-top: .5em;
+
+      > a {
+        margin: 1em;
+      }
+    }
 
     &__inner {
 
