--- a/themes/rosedale/style.css
+++ b/themes/rosedale/style.css
@@ -182,4 +182,173 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+.tabby {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 2em;
+}
+.tabby__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 2em 1em;
+  font-size: 1.3em;
+  text-align: center;
+  height: 100%;
+}
+.tabby__inner strong {
+  display: flex;
+  height: 50px;
+  align-items: flex-end;
+  font-family: "Exo", sans-serif;
+}
+.tabby__inner i {
+  font-size: 2em;
+  margin-top: 0.5em;
+}
+.tabby__item {
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+  background-color: #234884;
+  position: relative;
+  transition: 0.25s ease-out;
+}
+.tabby__item:hover {
+  background-color: #1e3a6d;
+  box-shadow: 9px 14px 28px rgba(0, 0, 0, 0.17), 0 8px 16px rgba(0, 0, 0, 0.14);
+}
+.tabby__item:after {
+  height: 5px;
+  content: "";
+  background-color: #a4c03c;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: -3px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.cta-persona > .et_pb_row {
+  box-shadow: 9px 14px 28px rgba(0, 0, 0, 0.17), 0 8px 16px rgba(0, 0, 0, 0.14);
+}
+
+.program-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 8px;
+  background-size: cover;
+  min-height: 400px;
+  background-position: center;
+}
+.program-cards__item {
+  color: white;
+  font-family: "Exo", sans-serif;
+  position: relative;
+}
+.program-cards__item:after {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  transition: 0.25s ease-out;
+}
+.program-cards__item:hover:after {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.program-cards__inner {
+  padding: 1em;
+  height: 100%;
+  display: flex;
+  align-items: end;
+  z-index: 2;
+  position: relative;
+}
+
+.rdc-stats > .et_pb_row {
+  display: flex;
+  align-items: center;
+}
+
+.stat-bubble {
+  display: flex;
+  align-items: center;
+}
+.stat-bubble--top {
+  justify-content: center;
+}
+.stat-bubble--top .stat-bubble__item {
+  margin: 1em;
+}
+.stat-bubble--bottom {
+  justify-content: space-evenly;
+}
+.stat-bubble__item {
+  border-radius: 50%;
+  height: 180px;
+  width: 180px;
+  border: 4px solid #234884;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: 0.25s ease-out;
+}
+.stat-bubble__item:hover {
+  border-color: #a4c03c;
+}
+.stat-bubble__inner {
+  padding: 1em;
+}
+.stat-bubble__inner > div {
+  margin: 0.2em;
+}
+.stat-bubble__inner > div:first-child {
+  color: #a4c03c;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.stat-bubble__inner > div:nth-child(2) {
+  color: white;
+  text-transform: uppercase;
+  font-size: 2.2em;
+  font-weight: bold;
+  letter-spacing: -2px;
+}
+.stat-bubble__inner > div:nth-child(3) {
+  color: white;
+  font-size: 0.8em;
+  line-height: 1.2em;
+}
+
+.working {
+  min-height: 900px;
+}
+.working1 {
+  position: absolute;
+  right: 460px;
+}
+.working2 {
+  position: absolute;
+  right: 0;
+  z-index: 3;
+  top: 100px;
+}
+.working__white {
+  padding: 4em 7em 4em 4em;
+}
+.working__blue {
+  padding: 3em;
+}
+
 /*# sourceMappingURL=style.css.map */
